tests/snippets/dot_variant_in_union/lower.snapshot
# Lower

## snippet
  fn snippet$parse(c: char) -> Direction | ParseError
    if :void
      cond:
        eq :bool
          l:
            c :char
          r:
            char(0x4e)
      then:
        return int(0) :i32
    if :void
      cond:
        eq :bool
          l:
            c :char
          r:
            char(0x45)
      then:
        return int(1) :i32
    if :void
      cond:
        eq :bool
          l:
            c :char
          r:
            char(0x53)
      then:
        return int(2) :i32
    if :void
      cond:
        eq :bool
          l:
            c :char
          r:
            char(0x57)
      then:
        return int(3) :i32
    return
      ParseError {
        msg: "unknown" :string
      }
  fn snippet$dir_label(d: Direction) -> string
    ~>
      block :string
        let __scrut_0: Direction = d :Direction
        ~>
          if :string
            cond:
              eq :bool
                l:
                  __scrut_0 :Direction
                r:
                  int(0) :i32
            then:
              ~>
                "N" :string
            else:
              ~>
                if :string
                  cond:
                    eq :bool
                      l:
                        __scrut_0 :Direction
                      r:
                        int(1) :i32
                  then:
                    ~>
                      "E" :string
                  else:
                    ~>
                      if :string
                        cond:
                          eq :bool
                            l:
                              __scrut_0 :Direction
                            r:
                              int(2) :i32
                        then:
                          ~>
                            "S" :string
                        else:
                          ~>
                            if :string
                              cond:
                                eq :bool
                                  l:
                                    __scrut_0 :Direction
                                  r:
                                    int(3) :i32
                              then:
                                ~>
                                  "W" :string
                              else:
                                ~>
                                  unreachable("non-exhaustive match (T3013 should have caught this)") :string
  fn snippet$main() -> i32
    block :void
      let __scrut_0: Direction | ParseError =
        call :Direction | ParseError
          callee:
            parse :fn(char) -> Direction | ParseError
          arg0:
            char(0x4e)
      ~>
        if :void
          cond:
            is Direction :bool
              __scrut_0 :Direction | ParseError
          then:
            let d: Direction =
              cast → Direction
                __scrut_0 :Direction | ParseError
            ~>
              call :void
                callee:
                  std_io$println__string :void
                arg0:
                  call :string
                    callee:
                      dir_label :fn(Direction) -> string
                    arg0:
                      d :Direction
          else:
            ~>
              if :void
                cond:
                  is ParseError :bool
                    __scrut_0 :Direction | ParseError
                then:
                  ~>
                    call :void
                      callee:
                        std_io$println__string :void
                      arg0:
                        "err" :string
                else:
                  ~>
                    unreachable("non-exhaustive match (T3013 should have caught this)") :void
    block :void
      let __scrut_1: Direction | ParseError =
        call :Direction | ParseError
          callee:
            parse :fn(char) -> Direction | ParseError
          arg0:
            char(0x3f)
      ~>
        if :void
          cond:
            is Direction :bool
              __scrut_1 :Direction | ParseError
          then:
            let d: Direction =
              cast → Direction
                __scrut_1 :Direction | ParseError
            ~>
              call :void
                callee:
                  std_io$println__string :void
                arg0:
                  call :string
                    callee:
                      dir_label :fn(Direction) -> string
                    arg0:
                      d :Direction
          else:
            ~>
              if :void
                cond:
                  is ParseError :bool
                    __scrut_1 :Direction | ParseError
                then:
                  ~>
                    call :void
                      callee:
                        std_io$println__string :void
                      arg0:
                        "err" :string
                else:
                  ~>
                    unreachable("non-exhaustive match (T3013 should have caught this)") :void
    return int(0) :i32
